# OpenVVC

./: .clang-format  .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  dectest.c  iconfigure  libovvc.mak  shared.mak  version.sh  x86libovvc.mak
.github/workflows/: CI.yml
CI/: cactus_intra_ateme_noFilt_tiles1_Fr1.266  cactus_intra_ateme_noFilt_tiles1_Fr1.md5  cactus_intra_ateme_noFilt_tiles1_Fr32.266  cactus_intra_ateme_noFilt_tiles1_Fr32.md5  cactus_intra_ateme_yesALF_tiles1_Fr9.md5  cactus_intra_ateme_yesCCALF_tiles1_Fr2.266  cactus_intra_ateme_yesCCALF_tiles1_Fr2.md5  checkMD5.sh  conf.vmd5  dlvideobin  extractProfileInfo.sh  ovnreg  profiling.sh  updateMD5.sh
CI/test_bitstreams/: bqmall_intra_ateme_allFilt_Fr2.266  bqmall_intra_ateme_allFilt_Fr2.md5  bqmall_intra_ateme_yesLMCS_Fr2.266  bqmall_intra_ateme_yesLMCS_Fr2.md5  cactus_intra_ateme_noFilt_tiles1_Fr1.md5  cactus_intra_ateme_noFilt_tiles1_Fr32.md5  cactus_intra_ateme_yesALF_tiles1_Fr9.266  cactus_intra_ateme_yesALF_tiles1_Fr9.md5  cactus_intra_ateme_yesCCALF_tiles1_Fr2.md5  cactus_intra_ateme_yesSAO_tiles1_Fr1.266  cactus_intra_ateme_yesSAO_tiles1_Fr1.md5
examples/: Makefile.am  bench_decorator.h  dectest.c
libovvc/: Makefile.am  bitdepth.h  cabac_internal.h  compat_old.c  ctudec.c  ctudec.h  cu_utils.h  data_rcn_angular.c  data_rcn_angular.h  data_rcn_mip.c  data_rcn_mip.h  data_rcn_transform.c  data_rcn_transform.h  data_scan_lut.c  data_scan_lut.h  dbf_utils.h  dec_init.c  dec_structures.h  decinit.h  dpb.c  dpb_internal.c  drv.c  drv.h  drv_affine_mvp.c  drv_ibc.c  drv_intra.c  drv_lfnst.c  drv_lines.c  drv_lines.h  drv_mvp.c  drv_utils.h  fg_blend_stripe.asm  fg_blend_stripe.h  fg_compute_block_avg.asm  fg_compute_block_avg.h  hls_structures.h  libobj.mak  libopenvvc.pc.in  mempool.c  mempool.h  (+117 more)
libovvc/arm/: Makefile.am  armobj.mak  asm.S  rcn_alf_sse.c  rcn_dequant_neon.S  rcn_dequant_neon_wrapper.c  rcn_dequant_sse.c  rcn_df_sse.c  rcn_dmvr_sse.c  rcn_intra_angular_sse.c  rcn_intra_cclm_sse.c  rcn_intra_dc_planar_neon.S  rcn_intra_dc_planar_neon.c  rcn_intra_dc_planar_neon_wrapper.c  rcn_intra_dc_planar_sse.c  rcn_intra_mip_sse.c  rcn_lfnst_sse.c  rcn_mc_neon.S  rcn_mc_neon_wrapper.c  rcn_mc_sse.c  rcn_neon.c  rcn_neon.h  rcn_prof_bdof_sse.c  rcn_sao_neon.c  rcn_sao_sse.c  rcn_transform_add_neon.S  rcn_transform_add_neon.s  rcn_transform_add_neon_wrapper.c  rcn_transform_add_sse.c  rcn_transform_neon.S  rcn_transform_neon.c  rcn_transform_neon_wrapper.c  rcn_transform_sse.c  vvc_utils_sse.c  vvc_utils_sse.h
libovvc/x86/: Makefile.am  rcn_alf_avx2.c  rcn_alf_sse.c  rcn_avx2.h  rcn_dequant_sse.c  rcn_df_sse.c  rcn_dmvr_avx2.c  rcn_dmvr_sse.c  rcn_intra_angular_avx2.c  rcn_intra_angular_sse.c  rcn_intra_cclm_sse.c  rcn_intra_dc_planar_sse.c  rcn_intra_dc_planar_sse.h  rcn_intra_mip_avx2.c  rcn_intra_mip_sse.c  rcn_lfnst_sse.c  rcn_mc_avx2.c  rcn_mc_sse.c  rcn_mc_sse.h  rcn_prof_bdof_avx2.c  rcn_prof_bdof_sse.c  rcn_prof_sse.c  rcn_sao_avx2.c  rcn_sao_sse.c  rcn_sse.h  rcn_transform_add_avx2.c  rcn_transform_add_sse.c  rcn_transform_sse.c  rcn_transform_sse.h  vvc_utils_sse.c  vvc_utils_sse.h  x86obj.mak
libovvcdec/: Makefile  cabac_internal.h  ctudec.c  ctudec.h  data_rcn_angular.h  data_rcn_mip.h  data_rcn_transform.c  data_rcn_transform.h  dec_init.c  dec_structures.h  decinit.h  dpb.c  dpb_internal.c  drv.c  mempool.h  mempool_internal.h  nvcl.c  nvcl.h  nvcl_dpb.c  nvcl_nal_ph.c  nvcl_nal_pps.c  nvcl_nal_sei.c  nvcl_nal_sps.c  nvcl_private.h  nvcl_ptl.c  nvcl_rpl.c  nvcl_structures.h  nvcl_utils.h  nvcl_vui.c  ovdefs.h  ovdpb.h  ovframe.c  ovframe.h  ovunits.c  ovunits.h  ovvcdec.c  ovvcdec.h  rcn.c  rcn_fill_ref.c  rcn_fill_ref.h  (+20 more)
libovvcdmx/: Makefile  ovannexb.c  ovannexb.h  ovio.c  ovio.h  ovunits.c  ovunits.h  ovvcdmx.c  ovvcdmx.h
libovvcutils/: Makefile  mempool.c  mempool.h  mempool_internal.h  ovmem.h  ovvcerror.c  ovvcerror.h  ovvcutils.c  ovvcutils.h
src/: cabac_internal.h  data_rcn_angular.c  dec_init.c  dpb.c  dpb_internal.c  nvcl.c  nvcl.h  nvcl_hrd.c  nvcl_nal_dci.c  nvcl_nal_opi.c  nvcl_nal_sps.c  nvcl_nal_vps.c  nvcl_rpl.c  ovannexb.h  overror.c  ovframe.c  ovframe.h  ovio.c  ovunits.c  ovutils.c  ovutils.h  rcn.c  rcn_fill_ref.c  rcn_intra_angular.h  rcn_intra_dc_planar.c  rcn_intra_dc_planar.h  rcn_intra_mip.c  rcn_intra_mip.h  rcn_lfnst.c  rcn_mc.c  slicedec.h  vcl_cabac.h  vcl_coding_tree.c  vcl_residual_coding.c  vcl_transform_unit.c
